...
  // printNSString(s)

  printString(ns as String)
  printNSString(s as NSString)
 
  let path = "/Users/kofler"
  String(NSString(string: path).appendingPathComponent("Documents"))
  (path as NSString).appendingPathComponent("Documents") as String
}

// ä versus a"
if true {
  let single = "ä"           // ä als Einzelzeichen
...
